# fabric-samples/chaincode/fileSign-backend/routes/fileRoutes.js
@@ -1,18 +1,20 @@
 const express = require('express');
-const multer = require('multer');
-const { 
-    storeFile, 
-    verifyFile, 
-    generateSignature,
-    generateHash // 添加生成哈希的控制器
+const {
+    addItem,
+    deleteItem,
+    borrowItem,
+    returnItem,
+    getAllItems,
+    getItemHistory
 } = require('../controllers/fileController');
 
 const router = express.Router();
-const upload = multer({ dest: 'uploads/' });
 
-router.post('/', storeFile);
-router.post('/verify', verifyFile);
-router.post('/sign', generateSignature);
-router.post('/hash', upload.single('file'), generateHash); // 添加生成哈希的路由并使用 multer 中间件
+router.post('/add', addItem);
+router.post('/delete', deleteItem);
+router.post('/borrow', borrowItem);
+router.post('/return', returnItem);
+router.get('/all', getAllItems);
+router.get('/history', getItemHistory);
 
 module.exports = router;
