# fabric-samples/chaincode/fileSign-backend/server.js
@@ -3,7 +3,7 @@ const bodyParser = require('body-parser');
 const cors = require('cors');
 const swaggerUi = require('swagger-ui-express');
 const swaggerDocument = require('./swagger.json');
-const fileRoutes = require('./routes/fileRoutes');
+const itemRoutes = require('./routes/fileRoutes');
 
 const app = express();
 
@@ -11,7 +11,7 @@ app.use(cors());
 app.use(bodyParser.json());
 app.use(bodyParser.urlencoded({ extended: true })); // 添加 urlencoded 解析
 app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
-app.use('/api/files', fileRoutes);
+app.use('/api/items', itemRoutes);
 
 const PORT = 3000;
 app.listen(PORT, () => {
